--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,9 @@
 {
-    "name": "mdmsoft/yii2-admin",
+    "name": "stitchua/yii2-admin",
     "description": "RBAC Auth manager for Yii2 ",
     "keywords": ["yii", "admin", "auth", "rbac"],
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
-    "support": {
-        "issues": "https://github.com/mdmsoft/yii2-admin/issues",
-        "source": "https://github.com/mdmsoft/yii2-admin"
-    },
     "authors": [
         {
             "name": "Misbahul Munir",
